[package]
name = "time-func"
version = "0.1.0"
authors = ["Eric Woolsey"]
edition = "2021"
description = "represents a set of data points as a function of time and performs various mathematical operations on the data"

[lib]
crate-type = ["lib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] } 
serde = "1.0.137"
serde_closure = "0.3.2"
plotters = "^0.3.1"
mindtree_utils = "0.4.0"